// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exclude asset exclude all 1`] = `Array []`;

exports[`exclude asset exclude some 1`] = `
Array [
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 4603,
              "size": 4603,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 1963,
              "size": 1963,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 2640,
                "ok": true,
                "percent": 134.48802852776365,
              },
              "size": Object {
                "absolute": 2640,
                "ok": false,
                "percent": 134.48802852776365,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 1,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of assets is 2.58 kb (134.49%). It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 12487,
              "size": 13077,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8893,
              "size": 9027,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 3594,
                "ok": true,
                "percent": 40.413808613516245,
              },
              "size": Object {
                "absolute": 4050,
                "ok": false,
                "percent": 44.865403788634104,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 1,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 3.96 kb (44.87%). It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSizeDiff global 1`] = `
Array [
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 13182,
              "size": 13772,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8893,
              "size": 9027,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": false,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 4289,
                "ok": true,
                "percent": 48.22894411334757,
              },
              "size": Object {
                "absolute": 4745,
                "ok": true,
                "percent": 52.56452863631329,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 0.45 kb (340.30%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSizeDiff not match - global 1`] = `Array []`;

exports[`maxAsyncSizeDiff not match - override global 1`] = `Array []`;

exports[`maxAsyncSizeDiff override global 1`] = `
Array [
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 13182,
              "size": 13772,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8893,
              "size": 9027,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": false,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 4289,
                "ok": true,
                "percent": 48.22894411334757,
              },
              "size": Object {
                "absolute": 4745,
                "ok": true,
                "percent": 52.56452863631329,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 0.45 kb (340.30%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 31880,
              "size": 33080,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12811,
              "size": 12953,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": false,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 19069,
                "ok": true,
                "percent": 148.84864569510577,
              },
              "size": Object {
                "absolute": 20127,
                "ok": true,
                "percent": 155.38485292982324,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 1.03 kb (745.07%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSizeDiff global 1`] = `
Array [
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 5298,
              "size": 5298,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 1963,
              "size": 1963,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 3335,
                "ok": false,
                "percent": 169.89302088639838,
              },
              "size": Object {
                "absolute": 3335,
                "ok": true,
                "percent": 169.89302088639838,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of initial assets is 3.26 kb (169.89%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 13182,
              "size": 13772,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8893,
              "size": 9027,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 4289,
                "ok": false,
                "percent": 48.22894411334757,
              },
              "size": Object {
                "absolute": 4745,
                "ok": true,
                "percent": 52.56452863631329,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of initial assets is 4.19 kb (48.23%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSizeDiff not match - global 1`] = `Array []`;

exports[`maxInitialSizeDiff not match - override global 1`] = `Array []`;

exports[`maxInitialSizeDiff override global 1`] = `
Array [
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 5298,
              "size": 5298,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 1963,
              "size": 1963,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 3335,
                "ok": false,
                "percent": 169.89302088639838,
              },
              "size": Object {
                "absolute": 3335,
                "ok": true,
                "percent": 169.89302088639838,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of initial assets is 3.26 kb (169.89%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 13182,
              "size": 13772,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8893,
              "size": 9027,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 4289,
                "ok": false,
                "percent": 48.22894411334757,
              },
              "size": Object {
                "absolute": 4745,
                "ok": true,
                "percent": 52.56452863631329,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of initial assets is 4.19 kb (48.23%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 19863,
              "size": 19863,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 3526,
              "size": 3526,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 16337,
                "ok": false,
                "percent": 463.32955190017015,
              },
              "size": Object {
                "absolute": 16337,
                "ok": true,
                "percent": 463.32955190017015,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of initial assets is 15.95 kb (463.33%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 31880,
              "size": 33080,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12811,
              "size": 12953,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": true,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 19069,
                "ok": false,
                "percent": 148.84864569510577,
              },
              "size": Object {
                "absolute": 20127,
                "ok": true,
                "percent": 155.38485292982324,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of initial assets is 18.62 kb (148.85%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff global 1`] = `
Array [
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 5298,
              "size": 5298,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 1963,
              "size": 1963,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 3335,
                "ok": true,
                "percent": 169.89302088639838,
              },
              "size": Object {
                "absolute": 3335,
                "ok": false,
                "percent": 169.89302088639838,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of assets is 3.26 kb (169.89%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 13182,
              "size": 13772,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8893,
              "size": 9027,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 4289,
                "ok": true,
                "percent": 48.22894411334757,
              },
              "size": Object {
                "absolute": 4745,
                "ok": false,
                "percent": 52.56452863631329,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 4.63 kb (52.56%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff not match - global 1`] = `Array []`;

exports[`maxSizeDiff not match - override global 1`] = `Array []`;

exports[`maxSizeDiff override global 1`] = `
Array [
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 5298,
              "size": 5298,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 1963,
              "size": 1963,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 3335,
                "ok": true,
                "percent": 169.89302088639838,
              },
              "size": Object {
                "absolute": 3335,
                "ok": false,
                "percent": 169.89302088639838,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of assets is 3.26 kb (169.89%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 13182,
              "size": 13772,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8893,
              "size": 9027,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 4289,
                "ok": true,
                "percent": 48.22894411334757,
              },
              "size": Object {
                "absolute": 4745,
                "ok": false,
                "percent": 52.56452863631329,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 4.63 kb (52.56%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 19863,
              "size": 19863,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 3526,
              "size": 3526,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 16337,
                "ok": true,
                "percent": 463.32955190017015,
              },
              "size": Object {
                "absolute": 16337,
                "ok": false,
                "percent": 463.32955190017015,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of assets is 15.95 kb (463.33%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "ccac20dc279ee29ab60e",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 31880,
              "size": 33080,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12811,
              "size": 12953,
            },
            "compilation": "ccac20dc279ee29ab60e",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": true,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 19069,
                "ok": true,
                "percent": 148.84864569510577,
              },
              "size": Object {
                "absolute": 20127,
                "ok": false,
                "percent": 155.38485292982324,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 19.66 kb (155.38%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;
